# shelfshift-demo

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
fixtures/exporter/bigcommerce/: bigcommerce_edge_numbers_full.csv  bigcommerce_legacy_one_simple_product_full.csv  bigcommerce_media_edge_cases_full.csv  bigcommerce_missing_optional_fields_full.csv  bigcommerce_one_product_two_variants_full.csv  bigcommerce_one_simple_product_full.csv
fixtures/exporter/shopify/: shopify_one_product_two_variants_full.csv  shopify_one_simple_product_full.csv  shopify_two_products_batch.csv
fixtures/exporter/squarespace/: squarespace_one_product_two_variants_full.csv  squarespace_one_simple_product_full.csv
fixtures/exporter/wix/: wix_edge_numbers_full.csv  wix_media_edge_cases_full.csv  wix_missing_optional_fields_full.csv  wix_one_product_two_variants_full.csv  wix_one_simple_product_full.csv
fixtures/exporter/woocommerce/: woocommerce_one_product_two_variations_full.csv  woocommerce_one_simple_product_full.csv
notes/: docs_code_blocks_audit.md
src/shelfshift_demo/: config.py  main.py  schemas.py
src/shelfshift_demo/helpers/: __init__.py  docs_content.py  docs_runtime.py  exporting.py  importing.py  payload.py  rendering.py  (+1 more)
tests/: test_api_import_serialization.py  test_app.py  test_batch_csv_feature.py  test_batch_url_feature.py  test_csv_import_feature.py  test_demo_smoke.py  test_docs_runtime.py  test_docs_ui_cells.py  test_import_logging.py  test_runtime_config.py  test_vercel_entrypoint.py
tests/helpers/: _app_helpers.py  _model_builders.py
(+22 files in other folders)
